# ChangeLog for sci-biology/sibsim4
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Oct 2007; Markus Ullmann <jokey@gentoo.org> sibsim4-0.15:
  Fix quoting

  08 Sep 2007; Markus Ullmann <jokey@gentoo.org> -sibsim4-0.14.ebuild:
  Drop old

  07 Sep 2007; azazello <gentoo@horizon.ath.cx> sibsim4-0.15.ebuild:
  ok really fixed, I promise

  07 Sep 2007; azazello <gentoo@horizon.ath.cx> sibsim4-0.15.ebuild:
  oops, forgot to diff local copy

  07 Sep 2007; azazello <gentoo@horizon.ath.cx> +sibsim4-0.15.ebuild:
  version bump

  18 Apr 2007; AK <gentoo@horizon.ath.cx> +sibsim4-0.14.ebuild,
  +metadata.xml:
  new package (bug 175143)
