@@ -1,4 +1,6 @@
 DIST SIBsim4-0.15.tar.gz 29090 RMD160 b9c56dd5bc2c69a2eefce7b15aa064d53c5ee8f0 SHA1 c0660daa7b95d986fc08dd6247014bbf3631cdd5 SHA256 d2b9c40d5935f1dc2bd66a65f80a907e0cfa7d317d304090ad32aa28b9f46a1b
+DIST SIBsim4-0.16.tar.gz 30287 RMD160 f549c5021447fe00fcb907441265fdd53d7bc2f5 SHA1 40a3b959dbe108251a5b82e37d2a6d40aafca0a8 SHA256 7f75e5f1283cbc4d22919dac4a820f81b3947cb3ea432077ad33b8180f3db567
 EBUILD sibsim4-0.15.ebuild 553 RMD160 fa6d484d727f957c77efce41a7c8a507ada9b1a7 SHA1 4515323731142c54a942385297ee85013d0c3400 SHA256 b676047caf8b46261af05d682c76be3873ee4321464a80c4500189bcfd7b2837
-MISC ChangeLog 679 RMD160 78a1c2ea469fcb461f071fd64e31090e29f4cdc6 SHA1 03bcfb240e55be1dc11204c6dba0e3481748e587 SHA256 76742546bf4faf505dd0a0da5b0510253bb746fb85a96c6600f491d73911dd0b
+EBUILD sibsim4-0.16.ebuild 544 RMD160 1a856a50f729588bd91951c61553f61c4523a9d3 SHA1 a7abfe5b68778b8f73dcec2872e263c6e5056843 SHA256 7048a000a6f2d7adce3538bea8e1a7061746e7d3d8d89358d06324e6d5959086
+MISC ChangeLog 765 RMD160 d20248343699175a9ce152d2ce9b9420390c4880 SHA1 537e8e19b03f057f245a7c94f5b54a47b45d47b5 SHA256 4bcbe736a3cd4e86c4fb15455fa71f26910c4daef5b72e190eb08cf43ccca5cd
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
